--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%=title%></title>
+  <meta charset="utf-8">
+  <title><%=title%></title>
+  <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"> -->
+  <meta name="keywords" content="<%=title%>" />
+  <meta name="description" content="<%=description%>" />
+  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <script type="text/javascript"></script>
 </head>
 <body>
-	<h1><%=message%></h1>
+  <div id="wrapper">
+  	
+  	<div id="main"></div>
+  	
+  </div>
 </body>
 </html>
