--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,14 @@
   <meta name="keywords" content="<%=title%>" />
   <meta name="description" content="<%=description%>" />
   <link rel="stylesheet" type="text/css" href="css/base.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
   <script type="text/javascript"></script>
 </head>
 <body>
   <div id="wrapper">
-  	
+  	<% include header %>	
   	<div id="main"></div>
-  	
+  	<% include footer %>
   </div>
 </body>
 </html>
