--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,14 +4,14 @@
   </div>
 	<div id="header-nav">
 		<ul>
-			<a href=""><li>首页</li></a>
-			<a href=""><li>沸点简介</li></a>
-			<a href=""><li>团队文化</li></a>
-			<a href=""><li>历届成员</li></a>
-			<a href=""><li>新闻动态</li></a>
-			<a href=""><li>作品展示</li></a>
-			<a href=""><li>团队招新</li></a>
-			<a href=""><li>联系我们</li></a>
+			<a href="index"><li>首页</li></a>
+			<a href="introduction"><li>沸点简介</li></a>
+			<a href="culture"><li>团队文化</li></a>
+			<a href="members"><li>历届成员</li></a>
+			<a href="news"><li>新闻动态</li></a>
+			<a href="works"><li>作品展示</li></a>
+			<a href="recruit"><li>团队招新</li></a>
+			<a href="contact"><li>联系我们</li></a>
 		</ul>
 	</div>
 </div>
