--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,8 +17,23 @@
 	<% include header %>	
 	<!-- 内容区域 -->
 	<div id="main">
-		
+		<div id="contact">
+			<h1>联系我们</h1>
+			<div class="block-content">
+				<div><span><img src="images/address.png"></span><font>地址</font><p>中国·武汉·华中农业大学</p></div>
+				<div><span><img src="images/github.png"></span><font>Github</font><p>52FeidianStudio</p></div>
+				<div><span><img src="images/qq.png"></span><font>qq群</font><p>222807849</p></div>
+				<div><span><img src="images/wechat.png"></span><font>微信</font><p>FeidianStudio</p></div>
+				<div><span><img src="images/weibo.png"></span><font>微博</font><p>沸点工作室_hzau</p></div>
+				<div><span><img src="images/email.png"></span><font>Email</font><p>feidianstudio2010@163.com</p></div>
+			</div>
+			<h2><font>Find Us</font></h2>
+			<div class="map" id="dituContent">
+				<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=pYdYOt9I5ZMtMs0mSNhc5fXw7MFmGhH1"></script>
+			</div>
+		</div>
 	</div>
+	<script src="js/baidumapapi.js"></script>
 	<!-- 引入尾部文件 -->
 	<% include footer %>
 </div>
