--- a/views/culture.ejs
+++ b/views/culture.ejs
@@ -9,7 +9,7 @@
 	<meta name="description" content="<%=description%>" />
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/page.css">
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -17,8 +17,33 @@
 	<% include header %>	
 	<!-- 内容区域 -->
 	<div id="main">
-		
+		<div id="culture">
+			<div class="left-nav">
+				<h2>团队文化</h2>
+				<ul id="left-nav-ul">
+					<a href="javascript:;"><li>规章制度</li></a>
+					<a href="javascript:;"><li>团队精神</li></a>
+					<a href="javascript:;"><li>视频分享</li></a>
+					<a href="javascript:;"><li>文化活动</li></a>
+				</ul>
+			</div>
+			<div class="right-content">
+				<div class="content-one content-section">
+					<h2>规章制度</h2>
+				</div>
+				<div class="content-two content-section">
+					<h2>团队精神</h2>
+				</div>
+				<div class="content-three content-section">
+					<h2>视频分享</h2>
+				</div>
+				<div class="content-four content-section">
+					<h2>文化活动</h2>
+				</div>
+			</div>
+		</div>
 	</div>
+	<script src="js/page.js"></script>
 	<!-- 引入尾部文件 -->
 	<% include footer %>
 </div>
