--- a/public/css/base.css
+++ b/public/css/base.css
@@ -11,6 +11,7 @@ a {
 
 #wrapper {
 	width: 100%;
+	height: auto;
 	min-width: 1400px;
 	float: left;
 }
@@ -70,6 +71,7 @@ a {
 /*内容区*/
 #main {
 	width: 100%;
+	height: auto;
 	min-height: 600px;
 	float: left;
 	background: #fff;
