--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,5 @@
 #main {
+	height: auto;
 	min-height: 1500px;
 	float: left;
 }
@@ -102,7 +103,7 @@
 	border: 10px solid #ddd;
 }
 .group .block-content div span:hover {
-	border: 10px solid lightblue;
+	border: 10px solid #81C2D6;
 }
 .group .block-content div img {
 	width: 80px;
