--- a/views/culture.ejs
+++ b/views/culture.ejs
@@ -21,7 +21,7 @@
 			<div class="left-nav">
 				<h2>团队文化</h2>
 				<ul id="left-nav-ul">
-					<a href="javascript:;"><li>规章制度</li></a>
+					<a href="javascript:;"><li class="current">规章制度</li></a>
 					<a href="javascript:;"><li>团队精神</li></a>
 					<a href="javascript:;"><li>视频分享</li></a>
 					<a href="javascript:;"><li>文化活动</li></a>
