--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,17 @@
     		<div><span><img src="images/group5.png"></span><p>UI设计</p></div>
     	</div>
     </div>
+    <!-- 文化 -->
+    <div class="culture">
+        <div class="block-header">
+            <h2 class="title">CULTURE</h2>
+            <p class="title-description">OUR CULTURE AND BLIEF</p>
+        </div>
+        <div class="block-content">
+            <h2>守望前进，码梦为生，执著梦想，永不停息</h2>
+            <h3>Dream everything possible</h3>
+        </div>
+    </div>
     <!-- 新闻动态 -->
     <div class="news">
     	<div class="block-header">
