--- a/views/members.ejs
+++ b/views/members.ejs
@@ -9,7 +9,7 @@
 	<meta name="description" content="<%=description%>" />
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/page.css">
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -17,8 +17,162 @@
 	<% include header %>	
 	<!-- 内容区域 -->
 	<div id="main">
-		
+		<div id="members">
+			<div class="time-nav">
+				<span><i></i><font>2016级</font></span>
+				<span><i></i><font>2015级</font></span>
+				<span><i></i><font>2014级</font></span>
+				<span><i></i><font>2013级</font></span>
+				<span><i></i><font>2011级</font></span>
+				<span><i></i><font>2010级</font></span>
+			</div>
+			<div class="members-content">
+				<div id="2016" class="year-section">
+					<h2>2016级</h2>
+					<div class="person">
+						<div class="person-img">
+							<img src="uploads/headimg/60.jpg">
+						</div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+				</div>
+				<div id="2015" class="year-section">
+					<h2>2015级</h2>
+					<div class="person">
+						<div class="person-img">
+							<img src="uploads/headimg/60.jpg">
+						</div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+					<div class="person">
+						<div class="person-img"><img src="uploads/headimg/60.jpg"></div>
+						<div class="person-info">
+							<p><font>编号：</font>60</p>
+							<p><font>方向：</font>Web前端开发</p>
+							<p><font>E-mail：</font>1060031655@qq.com</p>
+							<p><font>最喜欢的话：</font>大家好大家哈大号金属大师倪发科聚少离多弗兰克</p>
+							<p><font>简介：</font>阿斯顿发送到发送到发送到功夫大使馆</p>
+						</div>
+						<div class="person-name">黄一凡</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+	<script src="js/page.js"></script>
 	<!-- 引入尾部文件 -->
 	<% include footer %>
 </div>
