--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,13 @@
 	height: auto;
 	min-height: 1500px;
 	float: left;
+	background-image: url(../images/welcome2.jpg);
+	background-position: 0px 0px;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-attachment:fixed;
 }
+
 /*图片滚动区*/
 #focus {
 	width: 100%;
@@ -118,6 +124,38 @@
 	float: left;
 	text-align: center;
 }
+/*文化*/
+.culture {
+	width: 100%;
+	height: 350px;
+	float: left;
+}
+.culture .block-header h2,
+.culture .block-header p {
+	color: #fff;
+	text-shadow: 0px 0px 5px #000;
+}
+.culture .block-content h2{
+	width: 100%;
+	height: 100px;
+	font-size: 3em;
+	float: left;
+	line-height: 120px;
+	text-align: center;
+	color: #fff;
+	font-family: 华文行楷;
+	text-shadow: 0px 0px 5px #000;
+}
+.culture .block-content h3{
+	width: 100%;
+	font-size: 3em;
+	float: left;
+	line-height: 80px;
+	text-align: center;
+	color: #fff;
+	font-family: "华文行楷", Arial, "Helvetica Neue", Helvetica;
+	text-shadow: 0px 0px 5px #000;
+}
 
 /*新闻动态*/
 .news {
@@ -125,6 +163,7 @@
 	height: 480px;
 	float: left;
 	background: #F5F6EB;
+
 }
 .news .block-content {
 	width: 80%;
