--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1,4 +1,5 @@
 #main {
+	width: 100%; 
 	min-height: 550px;
 	float: left;
 	padding-bottom: 50px;
@@ -45,6 +46,10 @@
 	float: left;
 	color: #666;
 	border-bottom: 1px dotted #ccc;
+}
+.left-nav ul li.current {
+	color: #8192D6;
+	font-weight: 500;
 }
 .right-content {
 	width: calc(100% - 280px);
@@ -161,6 +166,132 @@
 
 
 
+/*历届成员*/
+#members {
+	width: 80%;
+	min-height: 600px;
+	margin-left: 10%;
+	float: left;
+	/*background: #fff;*/
+	padding-top: 60px;
+	/*padding-bottom: 20px;*/
+}
+.time-nav {
+	width: 100px;
+	height: 400px;
+	background-image: url(../images/spine.png);
+	background-repeat: no-repeat;
+	background-size: 2px 100%;
+	background-position: 10px center; 
+	padding-top: 15px;
+	float: left;
+}
+.fixed-nav {
+	position: fixed;
+	top: 30px;
+
+}
+.time-nav span {
+	width: 80px;
+	height: 20px;
+	margin-bottom: 40px;
+	margin-left: 6px;
+	float: left;
+}
+.time-nav span i {
+	width: 10px;
+	height: 10px;
+	margin-top: 6px;
+	display: inline-block;
+	background: #fff;
+	border-radius: 50%;
+	border:1px solid #666;
+	float: left;
+}
+.time-nav span font {
+	width: 60px;
+	height: 20px;
+	margin-left: 5px;
+	float: left;
+	color:#333;
+	cursor: pointer;
+}
+.members-content {
+	width: calc(100% - 120px);
+	min-height: 500px;
+	margin-bottom: 20px;
+	float: right;
+}
+.year-section {
+	width: 100%;
+	float: left;
+	margin-bottom: 20px;
+}
+.year-section h2 {
+	width: 100%;
+	text-align: center;
+	height: 35px;
+	margin-bottom: 20px;
+	line-height: 20px;
+	font-weight: 400;
+	font-size: 1.4em;
+	float: left;
+	/*border-bottom: 2px solid #B31800;*/
+}
+.person {
+	width: 240px;
+	height: 320px;
+	float: left;
+	margin-left: 25px;
+	margin-bottom: 45px;
+	background: #fff;
+	border-radius: 5px;
+	position: relative;
+}
+.person-img {
+	width: 100%;
+	height: 120px;
+	margin-top: 10px;
+	float: left;
+}
+.person-img img {
+	width: 110px;
+	height: 110px;
+	float: left;
+	margin-left: 65px;
+	background: red;
+	border-radius: 50%;
+	box-shadow: 0px 0px 2px #666;
+}
+.person-info {
+	width: 88%;
+	height: 170px;
+	margin-left: 6%;
+	float: left;
+	/*background: red;*/
+}
+.person-info p {
+	font-size: 0.85em;
+	line-height: 1.5em;
+	color: #555;
+}
+.person-info p font {
+	color:#000;
+}
+.person-name {
+	width: 120px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	position: absolute;
+	top: 300px;
+	left: 60px;
+	border-radius: 3px;
+	background: #81C2D6;
+	z-index: 10;
+	font-size: 1.1em;
+	color: #fff;
+}
 
 
 
