--- a/views/introduction.ejs
+++ b/views/introduction.ejs
@@ -21,7 +21,7 @@
 			<div class="left-nav">
 				<h2>沸点简介</h2>
 				<ul id="left-nav-ul">
-					<a href="javascript:;"><li>团队简介</li></a>
+					<a href="javascript:;"><li class="current">团队简介</li></a>
 					<a href="javascript:;"><li>导师团简介</li></a>
 					<a href="javascript:;"><li>分组简介</li></a>
 				</ul>
