--- a/views/recruit.ejs
+++ b/views/recruit.ejs
@@ -21,7 +21,7 @@
 			<div class="left-nav">
 				<h2>团队招新</h2>
 				<ul id="left-nav-ul">
-					<a href="javascript:;"><li>招新简介</li></a>
+					<a href="javascript:;"><li class="current">招新简介</li></a>
 					<a href="javascript:;"><li>报名表</li></a>
 					<a href="javascript:;"><li>分组简介</li></a>
 				</ul>
