--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,12 +35,22 @@
                 <img src="images/focus10.jpg" class="focus-img">
             </div>
             <div class="focus-console">
-                <span class="left"></span>
-                <span class="right"></span>
+                <span class="left"><img src="images/left.png"></span>
+                <span class="right"><img src="images/right.png"></span>
             </div>
             <div class="focus-thumbnail">
-                <span></span>
-                <span></span>
+                <div class="focus-thumbnail-div">
+                    <span class="current">1</span>
+                    <span>2</span>
+                    <span>3</span>
+                    <span>4</span>
+                    <span>5</span>
+                    <span>6</span>
+                    <span>7</span>
+                    <span>8</span>
+                    <span>9</span>
+                    <span>10</span>
+                </div>
             </div>
 		</div>
     <!-- 简介 -->
@@ -87,18 +97,18 @@
       <div class="block-content">
         <div class="left news-list">
           <ul>
-            <li><a href="">沸点工作室2016年新官网上线啦</a><font>2016-12-12</font></li>
-            <li><a href="">沸点工作室2016年12月招新结果公布</a><font>2016-12-12</font></li>
-            <li><a href="">沸点工作室Android组改名为Java工程组</a><font>2016-12-12</font></li>
-            <li><a href="">沸点工作室关于成立信息安全组的相关通知</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【新闻公告】</b>沸点工作室2016年新官网上线啦</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【新闻公告】</b>沸点工作室2016年12月招新结果公布</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【新闻公告】</b>沸点工作室Android组改名为Java工程组</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【新闻公告】</b>沸点工作室关于成立信息安全组的相关通知</a><font>2016-12-12</font></li>
           </ul>
         </div>
         <div class="right news-list">
           <ul>
-            <li><a href="">沸点工作室2016年暑期培训于8月5日正式开始</a><font>2016-12-12</font></li>
-            <li><a href="">沸点工作室2015年全体成员合影留念</a><font>2016-12-12</font></li>
-            <li><a href="">沸点工作室2015年负责人换届竞选结果公布</a><font>2016-12-12</font></li>
-            <li><a href="">沸点工作室2014年招新开始啦</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【成员日志】</b>沸点工作室2016年暑期培训于8月5日正式开始</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【成员日志】</b>沸点工作室2015年全体成员合影留念</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【成员日志】</b>沸点工作室2015年负责人换届竞选结果公布</a><font>2016-12-12</font></li>
+            <li><a href=""><b>【成员日志】</b>沸点工作室2014年招新开始啦</a><font>2016-12-12</font></li>
           </ul>
         </div>
         <!-- <div class="right">
@@ -114,12 +124,12 @@
     		<p class="title-description">OUR FRIENDLY LINKS</p>
     	</div>
     	<div class="links-block">
-    		<img src="">
-    		<img src="">
-    		<img src="">
-    		<img src="">
-    		<img src="">
-    		<img src="">
+    		<img src="images/sale.png">
+    		<img src="images/sale.png">
+    		<img src="images/sale.png">
+    		<img src="images/sale.png">
+    		<img src="images/sale.png">
+    		<img src="images/sale.png">
     	</div>
     </div>
 	</div>
