--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,7 +12,7 @@
 /*图片滚动区*/
 #focus {
 	width: 100%;
-	height: 560px;
+	height: 580px;
 	background: #fff;
 	float: left;
 }	
@@ -24,6 +24,7 @@
 	background: #EFF0DC;
 	float: left;
 	overflow: hidden;
+	position: relative;
 }
 /*所有图片*/
 .focus-all-images {
@@ -34,6 +35,80 @@
 	width: 100%;
 	height: 500px;
 	float: left;
+}
+/*控制左右*/
+.focus-console {
+	position: relative;
+}
+.focus-console .left {
+	position: absolute;
+	width: 80px;
+	height: 500px;
+	display: inline-block;
+	left: 5%;
+	top: 25px;
+	cursor: pointer;
+}
+.focus-console .right {
+	position: absolute;
+	width: 80px;
+	height: 500px;
+	display: inline-block;
+	right: 5%;
+	top:  25px;
+	cursor: pointer;
+}
+.focus-console .left img {
+	width: 50px;
+	height: 50px;
+	position: relative;
+	top: 225px;
+	float: left;
+}
+.focus-console .right img {
+	width: 50px;
+	height: 50px;
+	position: relative;
+	top: 225px;
+	float: right;
+}
+.focus-console .left:hover {
+	background: linear-gradient(to right, rgba(125,125,125,0.3), rgba(0,0,0,0)); /* 标准的语法 */
+}
+
+.focus-console .right:hover {
+	background: linear-gradient(to left, rgba(125,125,125,0.3), rgba(0,0,0,0)); /* 标准的语法 */
+}
+/*缩略标志*/
+.focus-thumbnail {
+	width: 90%;
+	height: 4px;
+	margin-left: 5%;
+	margin-top: 18px;
+	float: left;
+}
+.focus-thumbnail div {
+	float: left;
+	display: inline-block;
+	width: 100%;
+	height: 4px;
+	text-align: center;
+}
+.focus-thumbnail div span {
+	width: 80px;
+	height: 4px;
+	border-radius: 2px;
+	display: inline-block;
+	background: #bbb;
+	background: #8192D6;
+	margin:0 auto;
+	margin-left: 5px;
+	margin-right: 5px;
+	text-indent:  -9999px;
+	cursor: pointer;
+}
+.focus-thumbnail div span.current {
+	background: #EB3F2F;
 }
 
 /*内容标题*/
@@ -114,9 +189,19 @@
 	border: 10px solid #ddd;
 }
 .group .block-content div span:hover {
-	border: 10px solid #81C2D6;
+	transition-property: border;
+	transition-duration: 1s;
+	border: 10px solid #707070;
 }
 .group .block-content div img {
+	width: 70px;
+	height: 70px;
+	margin-left: 30px;
+	margin-top: 25px;
+}
+.group .block-content div:hover img {
+	transition-property: width,height,margin-left,margin-top;
+	transition-duration: 1s,1s,1s,1s;
 	width: 80px;
 	height: 80px;
 	margin-left: 25px;
@@ -137,8 +222,8 @@
 }
 .culture .block-header h2,
 .culture .block-header p {
-	color: #fff;
-	text-shadow: 0px 0px 5px #000;
+	color: #333;
+	/*text-shadow: 0px 0px 5px #000;*/
 }
 .culture .block-content h2{
 	width: 100%;
@@ -153,12 +238,12 @@
 }
 .culture .block-content h3{
 	width: 100%;
-	font-size: 3em;
+	font-size: 2.2em;
 	float: left;
 	line-height: 80px;
 	text-align: center;
 	color: #fff;
-	font-family: "华文行楷", Arial, "Helvetica Neue", Helvetica;
+	font-family: "微软雅黑", Arial, "Helvetica Neue", Helvetica;
 	text-shadow: 0px 0px 5px #000;
 }
 
@@ -175,17 +260,17 @@
 	margin-left: 10%;
 }
 .news-list {
-	width: 35%;
+	width: 40%;
 	height: 320px;
 	/*background: #aaa;*/
 }
 .news .left {
 	float: left;
-	margin-left: 12%;
+	margin-left: 8%;
 }
 .news .right {
 	float: right;
-	margin-right: 12%;
+	margin-right: 8%;
 }
 .news-list ul {
 	width: 100%;
@@ -212,10 +297,14 @@
 .news-list ul li a:hover {
 	color: #337ab7;
 }
+.news-list ul li a b {
+	font-weight: 400;
+}
 .news-list ul li font {
 	width: 100%;
 	display: inline-block;
 	color: #666;
+	text-indent: 10px;
 }
 
 /*.news .right {
@@ -254,7 +343,7 @@
 /*友情链接*/
 .links {
 	width: 100%;
-	height: 290px;
+	height: 300px;
 	float: left;
 	background: #FFF;
 }
@@ -264,12 +353,15 @@
 	margin-left: 5%;
 	float: left;
 	/*background: #fff;*/
+	text-align: center;
 }
 .links-block img {
+	clear: both;
 	width: 190px;
 	height: 120px;
-	margin: 10px;
-	float:left;
-	background: yellow;
-
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	border: 1px solid #ccc;
+	/*background: yellow;*/
 }
