--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -11,6 +11,10 @@
 	<script type="text/javascript"></script>
 </head>
 <body>
+	<audio controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
+	  	<!-- <source src="你要播放的音乐.ogg" type="audio/ogg" /> -->
+	  	<source src="media/bgm.mp3" type="audio/mpeg" />
+	</audio>
 	<div id="wrapper">
 		<div id="title"></div>
 		<div id="declaration"></div>
