--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
 	<meta name="keywords" content="<%=title%>" />
 	<meta name="description" content="<%=description%>" />
 	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/dark.css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
@@ -53,85 +54,95 @@
                 </div>
             </div>
 		</div>
-    <!-- 简介 -->
-    <div class="introduction">
-      <div class="block-header">
-        <h2 class="title">INTRODUCTION</h2>
-        <p class="title-description">OUR BRIEF INTRODUCTION</p>
-      </div>  
-      <div class="block-content">
-        <p>沸点工作室是一支本科生IT人才孵化团队，以实际项目为驱动力，主攻web开发、移动手持设备软件开发(iOS/Android)以及信息安全。团队成立于2010年9月，其成员由华中农业大学在校本科生组成，现役成员来自信息、理学、工学、公管、植科、生科六院。工作室旨在提升团队成员面对新事物学习能力、动手实践能力、创新能力和团队协作精神。</p>
-      </div>
-    </div>
+        <!-- 简介 -->
+        <div class="introduction">
+          <div class="block-header">
+            <h2 class="title">INTRODUCTION</h2>
+            <p class="title-description">OUR BRIEF INTRODUCTION</p>
+          </div>  
+          <div class="block-content">
+            <p>沸点工作室是一支本科生IT人才孵化团队，以实际项目为驱动力，主攻web开发、移动手持设备软件开发(iOS/Android)以及信息安全。团队成立于2010年9月，其成员由华中农业大学在校本科生组成，现役成员来自信息、理学、工学、公管、植科、生科六院。工作室旨在提升团队成员面对新事物学习能力、动手实践能力、创新能力和团队协作精神。</p>
+          </div>
+        </div>
+        <!-- 文化 -->
+        <div class="culture">
+            <div class="block-header">
+                <h2 class="title">CULTURE</h2>
+                <p class="title-description">OUR CULTURE AND BLIEF</p>
+            </div>
+            <div class="block-content">
+                <h2>守望前进，码梦为生，执著梦想，永不停息</h2>
+                <h3>Dream everything possible</h3>
+            </div>
+        </div>
 		<!-- 工作室方向 -->
-    <div class="group">
-    	<div class="block-header">
-    		<h2 class="title">GROUPS</h2>
-    		<p class="title-description">OUR STUDY DIRECTION</p>
-    	</div>
-    	<div class="block-content">
-    		<div><span><img src="images/group1.png"></span><p>Web开发</p></div>
-    		<div><span><img src="images/group2.png"></span><p>Android/Java开发</p></div>
-    		<div><span><img src="images/group3.png"></span><p>iOS开发</p></div>
-    		<div><span><img src="images/group4.png"></span><p>信息安全</p></div>
-    		<div><span><img src="images/group5.png"></span><p>UI设计</p></div>
-    	</div>
-    </div>
-    <!-- 文化 -->
-    <div class="culture">
-        <div class="block-header">
-            <h2 class="title">CULTURE</h2>
-            <p class="title-description">OUR CULTURE AND BLIEF</p>
+        <div class="group">
+        	<div class="block-header">
+        		<h2 class="title">GROUPS</h2>
+        		<p class="title-description">OUR STUDY DIRECTION</p>
+        	</div>
+        	<div class="block-content">
+        		<div><span><img src="images/group1.png"></span><p>Web开发</p></div>
+        		<div><span><img src="images/group2.png"></span><p>Android/Java开发</p></div>
+        		<div><span><img src="images/group3.png"></span><p>iOS开发</p></div>
+        		<div><span><img src="images/group4.png"></span><p>信息安全</p></div>
+        		<div><span><img src="images/group5.png"></span><p>UI设计</p></div>
+        	</div>
         </div>
-        <div class="block-content">
-            <h2>守望前进，码梦为生，执著梦想，永不停息</h2>
-            <h3>Dream everything possible</h3>
+        <!-- 新闻动态 -->
+        <div class="news">
+        	<div class="block-header">
+        		<h2 class="title">NEWS</h2>
+        		<p class="title-description">OUR RECENTLY INFORMATION</p>
+        	</div>
+          <div class="block-content">
+            <div class="left news-list">
+              <ul>
+                <li><a href=""><b>【新闻公告】</b>沸点工作室2016年新官网上线啦</a><font>2016-12-12</font></li>
+                <li><a href=""><b>【新闻公告】</b>沸点工作室2016年12月招新结果公布</a><font>2016-12-12</font></li>
+                <li><a href=""><b>【新闻公告】</b>沸点工作室Android组改名为Java工程组</a><font>2016-12-12</font></li>
+                <li><a href=""><b>【新闻公告】</b>沸点工作室关于成立信息安全组的相关通知</a><font>2016-12-12</font></li>
+              </ul>
+            </div>
+            <div class="right news-list">
+              <ul>
+                <li><a href=""><b>【成员日志】</b>沸点工作室2016年暑期培训于8月5日正式开始</a><font>2016-12-12</font></li>
+                <li><a href=""><b>【成员日志】</b>沸点工作室2015年全体成员合影留念</a><font>2016-12-12</font></li>
+                <li><a href=""><b>【成员日志】</b>沸点工作室2015年负责人换届竞选结果公布</a><font>2016-12-12</font></li>
+                <li><a href=""><b>【成员日志】</b>沸点工作室2014年招新开始啦</a><font>2016-12-12</font></li>
+              </ul>
+            </div>
+            <!-- <div class="right">
+              <div><img src="images/news2.jpg"><span><p>沸点工作室2016启航大会</p><p>中国·武汉·华中农业大学</p><p>2016-12-12</p></span></div>
+              <div><img src="images/news2.jpg"><span><p>沸点工作室2016启航大会</p><p>中国·武汉·华中农业大学</p><p>2016-12-12</p></span></div>
+            </div> -->
+          </div>
         </div>
-    </div>
-    <!-- 新闻动态 -->
-    <div class="news">
-    	<div class="block-header">
-    		<h2 class="title">NEWS</h2>
-    		<p class="title-description">OUR RECENTLY INFORMATION</p>
-    	</div>
-      <div class="block-content">
-        <div class="left news-list">
-          <ul>
-            <li><a href=""><b>【新闻公告】</b>沸点工作室2016年新官网上线啦</a><font>2016-12-12</font></li>
-            <li><a href=""><b>【新闻公告】</b>沸点工作室2016年12月招新结果公布</a><font>2016-12-12</font></li>
-            <li><a href=""><b>【新闻公告】</b>沸点工作室Android组改名为Java工程组</a><font>2016-12-12</font></li>
-            <li><a href=""><b>【新闻公告】</b>沸点工作室关于成立信息安全组的相关通知</a><font>2016-12-12</font></li>
-          </ul>
-        </div>
-        <div class="right news-list">
-          <ul>
-            <li><a href=""><b>【成员日志】</b>沸点工作室2016年暑期培训于8月5日正式开始</a><font>2016-12-12</font></li>
-            <li><a href=""><b>【成员日志】</b>沸点工作室2015年全体成员合影留念</a><font>2016-12-12</font></li>
-            <li><a href=""><b>【成员日志】</b>沸点工作室2015年负责人换届竞选结果公布</a><font>2016-12-12</font></li>
-            <li><a href=""><b>【成员日志】</b>沸点工作室2014年招新开始啦</a><font>2016-12-12</font></li>
-          </ul>
-        </div>
-        <!-- <div class="right">
-          <div><img src="images/news2.jpg"><span><p>沸点工作室2016启航大会</p><p>中国·武汉·华中农业大学</p><p>2016-12-12</p></span></div>
-          <div><img src="images/news2.jpg"><span><p>沸点工作室2016启航大会</p><p>中国·武汉·华中农业大学</p><p>2016-12-12</p></span></div>
+        <!-- 联系方式 -->
+        <!-- <div class="contact">
+            <div class="block-header">
+                <h2 class="title">CONTACT</h2>
+                <p class="title-description">HOW TO CONTACT US</p>
+            </div>
+            <div class="contact-block">
+                
+            </div>
         </div> -->
-      </div>
-    </div>
-    <!-- 友情链接 -->
-    <div class="links">
-    	<div class="block-header">
-    		<h2 class="title">LINKS</h2>
-    		<p class="title-description">OUR FRIENDLY LINKS</p>
-    	</div>
-    	<div class="links-block">
-    		<img src="images/sale.png">
-    		<img src="images/sale.png">
-    		<img src="images/sale.png">
-    		<img src="images/sale.png">
-    		<img src="images/sale.png">
-    		<img src="images/sale.png">
-    	</div>
-    </div>
+        <!-- 友情链接 -->
+        <div class="links">
+        	<div class="block-header">
+        		<h2 class="title">LINKS</h2>
+        		<p class="title-description">OUR FRIENDLY LINKS</p>
+        	</div>
+        	<div class="links-block">
+        		<img src="images/sale.png">
+        		<img src="images/sale.png">
+        		<img src="images/sale.png">
+        		<img src="images/sale.png">
+        		<img src="images/sale.png">
+        		<img src="images/sale.png">
+        	</div>
+        </div>
 	</div>
 	<!-- 引入尾部文件 -->
 	<% include footer %>
