--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -10,7 +10,7 @@ html,body{
 	height: 100%;
 	min-height: 800px;
 	/*background-image: url(../images/666.jpg);*/
-	background: url(../images/black.jpg);
+	background: url(../images/welcome.jpg);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	background-position: left center;
