--- a/views/works.ejs
+++ b/views/works.ejs
@@ -17,7 +17,9 @@
 	<% include header %>	
 	<!-- 内容区域 -->
 	<div id="main">
-		
+		<div id="works">
+			
+		</div>
 	</div>
 	<!-- 引入尾部文件 -->
 	<% include footer %>
