--- a/public/css/page.css
+++ b/public/css/page.css
@@ -77,6 +77,7 @@
 	float: left;
 	font-size: 1.3em;
 	font-weight: 400;
+	color: #000;
 }
 .content-one {
 	display: block;
@@ -87,6 +88,8 @@
 /*简介页面*/
 #introduction,
 #culture,
+#news,
+#works,
 #recruit {
 	width: 80%;
 	height: auto;
@@ -293,6 +296,61 @@
 	z-index: 10;
 	font-size: 1.1em;
 	color: #fff;
+}
+
+/*新闻动态*/
+#news .right-content .content-section h2{
+	/*height: 50px;*/
+	/*border-bottom: 1px solid #666;*/
+}
+#news .news-list {
+	width: 100%;
+	min-height: 350px;
+	margin-bottom: 15px;
+	float: left;
+}
+#news .news-list a {
+	width: 100%;
+	height: 40px;
+	display: inline-block;
+	float: left;
+	color: #333;
+}
+.news-list a li {
+	width: 100%;
+	height: 40px;
+	line-height: 45px;
+	color: #333;
+	border-bottom: 1px dotted #666;
+}
+.news-list a li:hover {
+	color: #8192d6;
+}
+.news-list a li p {
+	width: 70%;
+	float: left;
+	text-indent: 10px;
+	font-size: 1.1em;
+	display: inline-block;
+	overflow: hidden;
+	text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.news-list a li font {
+	width: 15%;
+	float: right;
+	margin-right: 10px;
+	text-align: right;
+	display: inline-block;
+}
+
+
+
+/*作品展示*/
+#works {
+	height: 500px;
+	background: #fff;
+	border-radius: 5px;
 }
 
 
