--- a/views/culture.ejs
+++ b/views/culture.ejs
@@ -21,24 +21,24 @@
 			<div class="left-nav">
 				<h2>团队文化</h2>
 				<ul id="left-nav-ul">
-					<a href="javascript:;"><li class="current">规章制度</li></a>
+					<a href="javascript:;"><li class="current">文化综述</li></a>
+					<a href="javascript:;"><li>规章制度</li></a>
 					<a href="javascript:;"><li>团队精神</li></a>
-					<a href="javascript:;"><li>视频分享</li></a>
-					<a href="javascript:;"><li>文化活动</li></a>
+					<a href="javascript:;"><li>团队合照</li></a>
 				</ul>
 			</div>
 			<div class="right-content">
 				<div class="content-one content-section">
-					<h2>规章制度</h2>
+					<h2>文化综述</h2>
 				</div>
 				<div class="content-two content-section">
-					<h2>团队精神</h2>
+					<h2>规章制度</h2>
 				</div>
 				<div class="content-three content-section">
-					<h2>视频分享</h2>
+					<h2>团队精神</h2>
 				</div>
 				<div class="content-four content-section">
-					<h2>文化活动</h2>
+					<h2>团队合照</h2>
 				</div>
 			</div>
 		</div>
