--- a/views/news.ejs
+++ b/views/news.ejs
@@ -9,7 +9,7 @@
 	<meta name="description" content="<%=description%>" />
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/page.css">
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -17,8 +17,55 @@
 	<% include header %>	
 	<!-- 内容区域 -->
 	<div id="main">
-		
+		<div id="news">
+			<div class="left-nav">
+				<h2>新闻动态</h2>
+				<ul id="left-nav-ul">
+					<a href="javascript:;"><li class="current">新闻公告</li></a>
+					<a href="javascript:;"><li>成员日志</li></a>
+					<a href="javascript:;"><li>其他版块</li></a>
+				</ul>
+			</div>
+			<div class="right-content">
+				<div class="content-one content-section">
+					<h2>新闻公告</h2>
+					<div class="news-list">
+						<a href=""><li><p>沸点工作室2016年新官网上线啦沸点工作室2016年新官网上线啦沸点工作室2016年新官网上线啦沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+					</div>
+					<div class="news-page">
+						12345
+					</div>
+				</div>
+				<div class="content-two content-section">
+					<h2>成员日志</h2>
+					<div class="news-list">
+						<a href=""><li><p>沸点工作室2016年新官网上线啦沸点工作室2016年新官网上线啦沸点工作室2016年新官网上线啦沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+						<a href=""><li><p>沸点工作室2016年新官网上线啦</p><font>2016-12-12</font></li></a>
+					</div>
+					<div class="news-page">
+						12345
+					</div>
+				</div>
+				<div class="content-three content-section">
+					<h2>其他版块</h2>
+				</div>
+			</div>
+		</div>
 	</div>
+	<script src="js/page.js"></script>
 	<!-- 引入尾部文件 -->
 	<% include footer %>
 </div>
