--- a/views/recruit.ejs
+++ b/views/recruit.ejs
@@ -21,14 +21,14 @@
 			<div class="left-nav">
 				<h2>团队招新</h2>
 				<ul id="left-nav-ul">
-					<a href="javascript:;"><li class="current">招新简介</li></a>
+					<a href="javascript:;"><li class="current">招新详情</li></a>
 					<a href="javascript:;"><li>报名表</li></a>
 					<a href="javascript:;"><li>分组简介</li></a>
 				</ul>
 			</div>
 			<div class="right-content">
 				<div class="content-one content-section">
-					<h2>招新简介</h2>
+					<h2>招新详情</h2>
 				</div>
 				<div class="content-two content-section">
 					<h2>报名表</h2>
